Added an export function to save user data

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
                         <td><span class="mono">/setBackground &lt;url&gt;</span></td>
                         <td>sets the background-image to the image at <span class="mono">&lt;url&gt;</span>. Use <span class="mono">default</span> to use the local img/background.jpeg</td>
                     </tr>
+                    <tr>
+                        <td><span class="mono">/export</span></td>
+                        <td>exports all saved user data (search suggestions, notes and settings)</td>
+                    </tr>
                 </table>
             </div>
             <div id="noteList" class="textbox" style="display:none;">
