--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                         <td><span class="mono">/export</span></td>
                         <td>exports all saved user data (search suggestions, notes and settings)</td>
                     </tr>
+                    <tr>
+                        <td><span class="mono">/import</span></td>
+                        <td>load user data from a savefile</td>
+                    </tr>
                 </table>
             </div>
             <div id="noteList" class="textbox" style="display:none;">
