Added support for video background

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </tr>
                     <tr>
                         <td><span class="mono">/setBackground &lt;url&gt;</span></td>
-                        <td>sets the background-image to the image at <span class="mono">&lt;url&gt;</span>. Use <span class="mono">default</span> to use the local img/background.jpeg</td>
+                        <td>sets the background to the image or video at <span class="mono">&lt;url&gt;</span>. Use <span class="mono">default</span> to use the local img/background.jpeg</td>
                     </tr>
                     <tr>
                         <td><span class="mono">/export</span></td>
