--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <td>closes any opened text page</td>
                     </tr>
                     <tr>
-                        <td><span class="mono">/history</span></td>
-                        <td>displays the autocomplete history</td>
+                        <td><span class="mono">/history [clear|enable|disable]</span></td>
+                        <td>clears/enables/disables the the autocomplete history. If no argument is provided, the history is displayed</td>
                     </tr>
                     <tr>
                         <td><span class="mono">/save &lt;string&gt;</span></td>
